--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
             <i id="mute-button" class="fas fa-volume-mute"></i>
         </div>
         <div class="restart-icon">
-            <h4>Restart</h4>
+            <h4>Change Difficulty</h4>
             <i id="restart-button" class="fas fa-redo-alt"></i>
         </div>
     </div>
     <!-- Welcome modal -->
     <div id="welcome-modal" class="modal" tabindex="-1">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">welcome</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
+        <h4 class="modal-title">Welcome to Snake Hunt</h4>
+       </div>
       <div class="modal-body">
-        <p>Modal body text goes here.</p>
+        <p>Click on a card to reveal a snake, try to find the matching one. You have
+            120 seconds to find all the matches.<br> Good Luck!<br><br></p><h5>Select a difficulty level:</h5>
       </div>
       <div class="modal-footer">
-          <button type="button" id="easy-button" class="btn btn-secondary" >Easy</button>
-        <button type="button" id="medium-button" class="btn btn-secondary" >Medium</button>
-        <button type="button" id="hard-button" class="btn btn-secondary" >Hard</button>
+          <button type="button" id="easy-button" class="btn btn-secondary easy" >Easy</button>
+        <button type="button" id="medium-button" class="btn btn-secondary medium" >Medium</button>
+        <button type="button" id="hard-button" class="btn btn-secondary hard" >Hard</button>
       </div>
     </div>
   </div>
@@ -49,11 +49,18 @@
     <h1 class="page-title">
         Snake Hunt
     </h1>
-    <!--Start overlay-->
-    <div class="overlay-text start-overlay">
-        <h1>Welcome to Snake Hunt!</h1>
-        <span class="overlay-text-small">Click on a card to reveal a snake, try to find the matching one. You have
-            100 seconds to find all the matches. Good Luck!<br>Click to start!</span>
+    <!--Difficulty overlays -->
+    <div class="overlay-text" id="easy-overlay">
+        <h1>Easy Mode Selected!</h1>
+        <span class="overlay-text-small"><br>Click to start!</span>
+    </div>
+    <div class="overlay-text" id="medium-overlay">
+        <h1>Medium Mode Selected!</h1>
+        <span class="overlay-text-small"><br>Click to start!</span>
+    </div>
+    <div class="overlay-text" id="hard-overlay">
+        <h1>Hard Mode Selected!</h1>
+        <span class="overlay-text-small"><br>Click to start!</span>
     </div>
     <!--game over overlay-->
     <div id="game-over-text" class="overlay-text">
@@ -70,7 +77,7 @@
         <div class="game-info-container">
             <!--Game information-->
             <div class="game-info">
-                <h2>Time: <span id="time-remaining">100</span></h2>
+                <h2>Time: <span id="time-remaining">120</span></h2>
             </div>
             <div class="game-info">
                 <h2>Flips: <span id="flips">0</span></h2>
